--- a/embedding_calculation.ipynb
+++ b/embedding_calculation.ipynb
@@ -31,7 +31,7 @@
     }
    ],
    "source": [
-    "smiles_list = np.genfromtxt(\"data/jak2_smiles.txt\", dtype=str, delimiter='\\n', comments=None)[:5000]\n",
+    "smiles_list = np.genfromtxt(\"smiles.txt\", dtype=str, delimiter='\\n', comments=None)[:5000]\n",
     "print(f\"Loaded compounds: {len(smiles_list)}\")"
    ]
   },
@@ -54,6 +54,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b5bc9862",
+   "metadata": {},
+   "source": [
+    "The pre-trained model can be downloaded from [github.com/samoturk/mol2vec/blob/master/examples/models](https://github.com/samoturk/mol2vec/blob/master/examples/models/model_300dim.pkl)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "48556078-615e-43ec-af42-abcb5a0fd3ea",
@@ -63,7 +71,15 @@
     "from mol2vec.features import mol2alt_sentence, MolSentence\n",
     "from gensim.models import word2vec\n",
     "\n",
-    "mol2vec_model = word2vec.Word2Vec.load(\"models/mol2vec_model_300dim.pkl\")"
+    "mol2vec_model = word2vec.Word2Vec.load(\"mol2vec_model_300dim.pkl\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5cddd93e",
+   "metadata": {},
+   "source": [
+    "The source of **sentence2vec** function is [github.com/samoturk/mol2vec/issues/14](https://github.com/samoturk/mol2vec/issues/14) and was a solution suggested for the deprecation problem."
    ]
   },
   {
@@ -73,29 +89,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "'''https://github.com/samoturk/mol2vec/issues/14'''\n",
-    "def sentences2vec(sentences, model, unseen=None):\n",
-    "    \"\"\"Generate vectors for each sentence (list) in a list of sentences. Vector is simply a\n",
-    "    sum of vectors for individual words.\n",
-    "    \n",
-    "    Parameters\n",
-    "    ----------\n",
-    "    sentences : list, array\n",
-    "        List with sentences\n",
-    "    model : word2vec.Word2Vec\n",
-    "        Gensim word2vec model\n",
-    "    unseen : None, str\n",
-    "        Keyword for unseen words. If None, those words are skipped.\n",
-    "        https://stats.stackexchange.com/questions/163005/how-to-set-the-dictionary-for-text-analysis-using-neural-networks/163032#163032\n",
-    "\n",
-    "    Returns\n",
-    "    -------\n",
-    "    np.array\n",
-    "    \"\"\"\n",
-    "    \n",
+    "def sentences2vec(sentences, model, unseen=None):    \n",
     "    keys = set(model.wv.key_to_index)\n",
     "    vec = []\n",
-    "    \n",
     "    if unseen:\n",
     "        unseen_vec = model.wv.get_vector(unseen)\n",
     "    for sentence in sentences:\n",
@@ -105,7 +101,6 @@
     "            vec.append(sum([model.wv.get_vector(word) for word in sentence if word in set(sentence) & keys]))\n",
     "    return np.array(vec)\n",
     "\n",
-    "# Main function\n",
     "def get_mol2vec(smiles_list, model=None):\n",
     "    if model == None:\n",
     "        global mol2vec_model\n",
@@ -231,13 +226,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "cb7a359a",
+   "metadata": {},
+   "source": [
+    "This wrapper function for using ChemBert2a model was provided on [www.kaggle.com/code/alexandervc/chembert2a-smiles-embeddings-for-beginners](https://www.kaggle.com/code/alexandervc/chembert2a-smiles-embeddings-for-beginners/notebook)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 56,
    "id": "389b545e-4a17-41a9-9dc1-70c9f3e5df42",
    "metadata": {},
    "outputs": [],
    "source": [
-    "'''https://www.kaggle.com/code/alexandervc/chembert2a-smiles-embeddings-for-beginners/notebook'''\n",
     "def get_chemberta(smiles_list):\n",
     "    embeddings_cls = torch.zeros(len(smiles_list), 600)\n",
     "    embeddings_mean = torch.zeros(len(smiles_list), 600)\n",
@@ -246,7 +248,7 @@
     "        for i, smiles in enumerate(tqdm(smiles_list)):\n",
     "            encoded_input = tokenizer(smiles, return_tensors=\"pt\", padding=True, truncation=True)\n",
     "            model_output = chemberta(**encoded_input)\n",
-    "            # embedding = model_output[0][::,0,::]\n",
+    "            # embedding = model_output[0][::,0,::]      # class embedding\n",
     "            # embeddings_cls[i] = embedding\n",
     "            embedding = torch.mean(model_output[0], 1)\n",
     "            embeddings_mean[i] = embedding\n",
@@ -299,9 +301,7 @@
    "source": [
     "import requests\n",
     "import json\n",
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "import pickle"
+    "import pandas as pd"
    ]
   },
   {
@@ -316,7 +316,7 @@
     "    json_data = {\"batches\": batches}\n",
     "    return json_data\n",
     "\n",
-    "def get_descriptors(json_data, url=\"http://192.168.1.100:80/predict\"):\n",
+    "def get_descriptors(json_data, url=\"http://192.168.1.100:80/predict\"):  # Replace with address of own container\n",
     "    headers = {'Content-Type': 'application/json'}\n",
     "    response = requests.post(url, data=json.dumps(json_data), headers=headers)\n",
     "    response_json = response.json()\n",
@@ -384,7 +384,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "embedding = get_mte(\"data/embedding/jak2_smiles.npz\", smiles_list)"
+    "embedding = get_mte(\"mte_embedding.npz\", smiles_list)"
    ]
   },
   {
@@ -418,7 +418,7 @@
     "    mcw = MACAW(n_components=n_dimensions)\n",
     "    mcw.fit(smiles_list)\n",
     "    embedding = mcw.transform(smiles_list)\n",
-    "    retur embedding"
+    "    return embedding"
    ]
   },
   {
@@ -449,7 +449,7 @@
    "outputs": [],
    "source": [
     "import torch\n",
-    "from transformers import AutoModel, AutoModelForSeq2SeqLM, AutoModelForCausalLM, AutoModelForMaskedLM, AutoTokenizer, GenerationConfig\n",
+    "from transformers import AutoModel, AutoTokenizer\n",
     "\n",
     "model = AutoModel.from_pretrained(\"ibm/MoLFormer-XL-both-10pct\", deterministic_eval=True, trust_remote_code=True)\n",
     "tokenizer = AutoTokenizer.from_pretrained(\"ibm/MoLFormer-XL-both-10pct\", trust_remote_code=True)"
@@ -500,8 +500,16 @@
     "from transformers import GPT2TokenizerFast, GPT2LMHeadModel, DataCollatorWithPadding\n",
     "\n",
     "tokenizer = GPT2TokenizerFast.from_pretrained(\"entropy/gpt2_zinc_87m\", max_len=256)\n",
-    "model = GPT2LMHeadModel.from_pretrained('entropy/gpt2_zinc_87m')\n",
+    "model = GPT2LMHeadModel.from_pretrained(\"entropy/gpt2_zinc_87m\")\n",
     "collator = DataCollatorWithPadding(tokenizer, padding=True, return_tensors='pt')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6dbd68da",
+   "metadata": {},
+   "source": [
+    "Embeddings are generated in batches because there are no errors then."
    ]
   },
   {
@@ -632,11 +640,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "smiles_list = np.genfromtxt(\"data/jak2_smiles.txt\", dtype=str, comments=None)\n",
+    "smiles_list = np.genfromtxt(\"smiles.txt\", dtype=str, comments=None)\n",
     "print(f\"Loaded {len(smiles_list)} SMILES\")\n",
     "\n",
     "similarity_matrix = get_pairwise_similarity(smiles_list)\n",
-    "with open(f\"data/distance/similarity_jak2.pkl\", \"wb\") as file:\n",
+    "with open(f\"similarity.pkl\", \"wb\") as file:\n",
     "    pickle.dump(similarity_matrix, file)"
    ]
   },
@@ -645,7 +653,8 @@
    "id": "3143d32d-0cac-4b60-abbd-60e762e7b97f",
    "metadata": {},
    "source": [
-    "Calculate distances with different measures"
+    "### Calculating distances with different measures: euclidean, cosine, Canberra.\n",
+    "It is assumed that embedding are saved in *<embedding_name>_embedding.pkl* files. The calculated distance matrices are saved in *distance_<embedding_name>_<measure_name>.pkl*."
    ]
   },
   {
@@ -672,12 +681,12 @@
     "    embedding = emb_func(smiles_list)\n",
     "    embedding = np.nan_to_num(embedding)\n",
     "    print(f\"Calculated {emb_name} embedding: {embedding.shape}\")\n",
-    "    with open(f\"data/embedding/{emb_name}_embedding.pkl\", \"wb\") as file:\n",
+    "    with open(f\"{emb_name}_embedding.pkl\", \"wb\") as file:\n",
     "        pickle.dump(similarity_matrix, file)\n",
     "\n",
     "    for m_name in measure_list:\n",
     "        distance_matrix = get_pairwise_distance(embedding, m_name)\n",
-    "        with open(f\"data/distance/distance_{emb_name}_{m_name}.pkl\", \"wb\") as file:\n",
+    "        with open(f\"distance_{emb_name}_{m_name}.pkl\", \"wb\") as file:\n",
     "            pickle.dump(distance_matrix, file)\n",
     "        print(f\"\\tDistance {m_name} - done.\")\n",
     "    print(f\"Distance {emb_name} - done.\")"
@@ -688,7 +697,7 @@
    "id": "b4df4508-d7af-45c0-a56d-74c5bba4b121",
    "metadata": {},
    "source": [
-    "Calculate correlation between embedding distance and Morgan Tanimoto similarity"
+    "### Calculating correlation between embedding distance and Morgan Tanimoto similarity"
    ]
   },
   {
@@ -702,16 +711,16 @@
     "measures_list = (\"euclidean\", \"cosine\", \"canberra\")\n",
     "\n",
     "with open(f\"data/distance/similarity_jak2.pkl\", \"rb\") as file:\n",
-    "    similarity_matrix = pickle.load(file)[:1000,:1000]\n",
+    "    similarity_matrix = pickle.load(file)\n",
     "print(similarity_matrix.shape)\n",
     "    \n",
     "similarity_matrix_flat = similarity_matrix.flatten()\n",
     "X = [similarity_matrix_flat]\n",
     "for measure in measures_list:\n",
     "    print(measure)\n",
-    "    with open(f\"data/distance/distance_{embedding}_{measure}.pkl\", \"rb\") as file:\n",
+    "    with open(f\"distance_{embedding}_{measure}.pkl\", \"rb\") as file:\n",
     "        dist_matrix = pickle.load(file)\n",
-    "    dist_matrix = np.nan_to_num(dist_matrix[:5000, :5000])\n",
+    "    dist_matrix = np.nan_to_num(dist_matrix)\n",
     "    dist_matrix = dist_matrix.flatten()\n",
     "    dist_matrix_norm = (dist_matrix - np.min(dist_matrix))/np.ptp(dist_matrix)\n",
     "    X.append(dist_matrix_norm)\n",
