--- a/similarity_search.ipynb
+++ b/similarity_search.ipynb
@@ -19,7 +19,6 @@
     "import rdkit\n",
     "from rdkit import Chem\n",
     "from rdkit.Chem import Draw\n",
-    "from rdkit.Chem.Draw import MolsToGridImage\n",
     "from rdkit.Chem import rdFingerprintGenerator as rdGen\n",
     "from rdkit import DataStructs"
    ]
@@ -52,8 +51,9 @@
     }
    ],
    "source": [
-    "with open(\"data/embedding/mixed_embedding.pkl\", \"rb\") as file:\n",
+    "with open(\"embedding.pkl\", \"rb\") as file:\n",
     "    embedding_list = pickle.load(file)\n",
+    "    \n",
     "embedding_list = np.nan_to_num(embedding_list)\n",
     "embedding_list.shape"
    ]
@@ -90,12 +90,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "36368ddb-df08-4e89-b6e3-1c28e07e5e7d",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
    "id": "8d7130d5-11c1-4c85-8a7a-60d135c0e0a0",
    "metadata": {
     "jp-MarkdownHeadingCollapsed": true
@@ -126,6 +120,8 @@
     "    fpgen = rdGen.GetMorganGenerator(radius=2, fpSize=2048)\n",
     "    fingerprint_list = np.array([fpgen.GetFingerprint(Chem.MolFromSmiles(smiles)) for smiles in smiles_list], dtype=rdkit.DataStructs.cDataStructs.ExplicitBitVect)\n",
     "    return fingerprint_list\n",
+    "\n",
+    "smiles_list = np.genfromtxt(\"smiles.txt\", dtype=str, delimiter='\\n', comments=None)\n",
     "fingerprint_list = get_fingerprints(smiles_list)\n",
     "fingerprint_list.shape"
    ]
@@ -207,7 +203,7 @@
     "    fig = plt.figure(figsize=(8, (total_rows * 2)))\n",
     "    gs = GridSpec(total_rows, 1, figure=fig, hspace=0.0)\n",
     "\n",
-    "    # ------------------------ First Plot ------------------------\n",
+    "    # ------------------------ First plot ------------------------\n",
     "    data = get_data(embedding_results, similarity_results, n)\n",
     "    mols = [Chem.MolFromSmiles(smiles) for smiles in data[\"smiles\"]]\n",
     "    for i, mol in enumerate(mols):\n",
@@ -232,7 +228,7 @@
     "                horizontalalignment='center', verticalalignment='center',\n",
     "                fontsize=12)\n",
     "\n",
-    "    # ------------------------ Second Plot ------------------------\n",
+    "    # ------------------------ Second plot ------------------------\n",
     "    data = get_remaining_data(embedding_results, similarity_results, n)\n",
     "    mols = [Chem.MolFromSmiles(smiles) for smiles in data[\"smiles\"]]\n",
     "    for i, mol in enumerate(mols):\n",
@@ -258,6 +254,21 @@
    "metadata": {},
    "source": [
     "Generate the summary for a compound from the query dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c25baf6a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "query_smiles_list = np.genfromtxt(\"query_smiles.txt\", dtype=str, delimiter='\\n', comments=None)\n",
+    "print(f\"Loaded {len(query_smiles_list)} SMILES\")\n",
+    "\n",
+    "with open(\"query_embedding.pkl\", \"rb\") as file:\n",
+    "    query_embedding_list = pickle.load(file)\n",
+    "print(f\"Loaded {len(query_embedding_list)} embeddings\")"
    ]
   },
   {
@@ -372,11 +383,11 @@
    "outputs": [],
    "source": [
     "# Load similarity matrix for compounds in the database\n",
-    "with open(\"data/distance/similarity_mixed.pkl\", \"rb\") as file:\n",
+    "with open(\"similarity.pkl\", \"rb\") as file:\n",
     "    similarity_matrix = pickle.load(file)\n",
     "\n",
     "# or generate it\n",
-    "# smiles_list = np.genfromtxt(\"data/smiles_mixed.txt\", dtype=str, comments=None)\n",
+    "# smiles_list = np.genfromtxt(\"smiles.txt\", dtype=str, comments=None)\n",
     "# similarity_matrix = get_pairwise_similarity(smiles_list)"
    ]
   },
