Adding code for MAT and R-MAT

--- a/embedding_calculation.ipynb
+++ b/embedding_calculation.ipynb
@@ -595,6 +595,157 @@
   },
   {
    "cell_type": "markdown",
+   "id": "671197c5-5559-4dc3-9539-247f84308e5d",
+   "metadata": {},
+   "source": [
+    "## MAT"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6fff9bee-9868-442c-957d-2e602fdd583b",
+   "metadata": {},
+   "source": [
+    "To use this snippet of code, download the [huggingmolecules repository](https://github.com/gmum/huggingmolecules). Before usage, download the [pretrained weights](https://github.com/gmum/huggingmolecules/blob/main/src/huggingmolecules/models/models_mat.py) and [configuration](https://github.com/gmum/huggingmolecules/blob/main/src/huggingmolecules/configuration/configuration_mat.py)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3f1eb409-a0e5-45d3-a8b5-3567e6fd6469",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from huggingmolecules.models.models_mat import MatModel\n",
+    "from huggingmolecules.configuration.configuration_mat import MatConfig\n",
+    "from huggingmolecules.featurization.featurization_mat import MatFeaturizer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0671222a-54d3-4cfc-9ff3-e298313a6403",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def load_mat(smiles_list):\n",
+    "    # Load config and add missing keys to the state dictionnary\n",
+    "    state_dict = torch.load(\"mat_masking_20M.pt\")\n",
+    "    missing_keys = (\"generator.proj.weight\", \"generator.proj.bias\")\n",
+    "    missing_sizes = ((1, 1024), (1,))\n",
+    "    for key, size in zip(missing_keys, missing_sizes):\n",
+    "        state_dict[key] = torch.Tensor(np.zeros(size))\n",
+    "    config = MatConfig.from_pretrained('mat_masking_20M.json')\n",
+    "    \n",
+    "    # Load featurizer\n",
+    "    featurizer = MatFeaturizer(config)\n",
+    "    batch = featurizer(smiles_list[:500])\n",
+    "    \n",
+    "    # Load model\n",
+    "    model = MatModel(config=config)\n",
+    "    model.load_state_dict(state_dict)\n",
+    "    model.eval()\n",
+    "    \n",
+    "    return model, featurizer\n",
+    "\n",
+    "def get_mat(smiles_list):\n",
+    "    model, featurizer = load_mat(smiles_list)\n",
+    "    batch_mask = torch.sum(torch.abs(batch.node_features), dim=-1) != 0\n",
+    "    embedded = model.src_embed(batch.node_features)\n",
+    "    encoding = model.encoder(embedded, batch_mask,\n",
+    "                           adj_matrix=batch.adjacency_matrix,\n",
+    "                           distance_matrix=batch.distance_matrix)\n",
+    "    embedding = np.mean(encoding.detach().numpy(), axis=1)\n",
+    "    return embedding"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "98c9c5f7-0c1e-430d-a5ca-3045ea880601",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "embedding = get_mat(smiles_list)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5f2919e0-260f-4e31-9632-5d060743ac7e",
+   "metadata": {},
+   "source": [
+    "## R-MAT"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1282be65-c151-49a8-8947-8f7753a885dd",
+   "metadata": {},
+   "source": [
+    "To use this snippet of code, download the [huggingmolecules repository](https://github.com/gmum/huggingmolecules). Before usage, download the [pretrained weights](https://github.com/gmum/huggingmolecules/blob/main/src/huggingmolecules/models/models_rmat.py) and [configuration](https://github.com/gmum/huggingmolecules/blob/main/src/huggingmolecules/configuration/configuration_rmat.py)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "73d63505-6b26-4f2b-b215-9c81c1892e8c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from huggingmolecules.models.models_rmat import RMatModel\n",
+    "from huggingmolecules.configuration.configuration_rmat import RMatConfig\n",
+    "from huggingmolecules.featurization.featurization_rmat import RMatFeaturizer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a19b736f-1510-4bb5-8c7d-5b9f1736c37c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def load_rmat(smiles_list):\n",
+    "    # Load config and add missing keys to the state dictionnary\n",
+    "    state_dict = torch.load(\"rmat_4M.pt\")\n",
+    "    missing_keys = (\"generator.att_net.0.weight\", \"generator.att_net.2.weight\", \"generator.proj.weight\", \"generator.proj.bias\")\n",
+    "    missing_sizes = ((128, 768), (4, 128), (1, 3072), (1,))\n",
+    "    for key, size in zip(missing_keys, missing_sizes):\n",
+    "        state_dict[key] = torch.Tensor(np.zeros(size))\n",
+    "    config = RMatConfig.from_pretrained('rmat_4M.json')\n",
+    "    \n",
+    "    # Load featurizer\n",
+    "    featurizer = RMatFeaturizer(config)\n",
+    "    batch = featurizer(smiles_list)\n",
+    "    \n",
+    "    # Load model\n",
+    "    model = RMatModel(config=config)\n",
+    "    model.load_state_dict(state_dict)\n",
+    "    model.eval()\n",
+    "    return model, featurizer\n",
+    "\n",
+    "def get_rmat(smiles_list):\n",
+    "    model, featurizer = load_rmat(smiles_list)\n",
+    "    batch_mask = torch.sum(torch.abs(batch.node_features), dim=-1) != 0\n",
+    "    embedded = model.src_embed(batch.node_features)\n",
+    "    distances_matrix = model.dist_rbf(batch.distance_matrix)\n",
+    "    edges_att = torch.cat((batch.bond_features, batch.relative_matrix, distances_matrix), dim=1)\n",
+    "    encoding = model.encoder(embedded, batch_mask, edges_att=edges_att)\n",
+    "    embedding = np.mean(encoding.detach().numpy(), axis=1)\n",
+    "    return embedding"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dec196a4-2a67-4c52-bf4e-e12976c34bd8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "embedding = get_rmat(smiles_list)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "d401bbee-9573-4565-8cb0-f43b82fcc8fc",
    "metadata": {
     "jp-MarkdownHeadingCollapsed": true
