Update in embedding_calculation

--- a/embedding_calculation.ipynb
+++ b/embedding_calculation.ipynb
@@ -866,20 +866,21 @@
     "print(similarity_matrix.shape)\n",
     "    \n",
     "similarity_matrix_flat = similarity_matrix.flatten()\n",
-    "X = [similarity_matrix_flat]\n",
-    "for measure in measures_list:\n",
-    "    print(measure)\n",
-    "    with open(f\"distance_{embedding}_{measure}.pkl\", \"rb\") as file:\n",
-    "        dist_matrix = pickle.load(file)\n",
-    "    dist_matrix = np.nan_to_num(dist_matrix)\n",
-    "    dist_matrix = dist_matrix.flatten()\n",
-    "    dist_matrix_norm = (dist_matrix - np.min(dist_matrix))/np.ptp(dist_matrix)\n",
-    "    X.append(dist_matrix_norm)\n",
-    "corr_matrix = np.corrcoef(X)\n",
+    "for embedding in embedding_list:\n",
+    "    X = [similarity_matrix_flat]\n",
+    "    for measure in measures_list:\n",
+    "        print(measure)\n",
+    "        with open(f\"distance_{embedding}_{measure}.pkl\", \"rb\") as file:\n",
+    "            dist_matrix = pickle.load(file)\n",
+    "        dist_matrix = np.nan_to_num(dist_matrix)\n",
+    "        dist_matrix = dist_matrix.flatten()\n",
+    "        dist_matrix_norm = (dist_matrix - np.min(dist_matrix))/np.ptp(dist_matrix)\n",
+    "        X.append(dist_matrix_norm)\n",
+    "    corr_matrix = np.corrcoef(X)\n",
     "\n",
-    "print(corr_matrix)\n",
-    "for measure, corr in zip(measures_list, corr_matrix[0, 1:]):\n",
-    "    print(f\"{measure}: {corr}\")"
+    "    print(corr_matrix)\n",
+    "    for measure, corr in zip(measures_list, corr_matrix[0, 1:]):\n",
+    "        print(f\"{measure}: {corr}\")"
    ]
   }
  ],
