--- a/embedding_calculation.ipynb
+++ b/embedding_calculation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "921b6444-b562-4478-ae55-8a8a12c8020f",
    "metadata": {},
    "outputs": [],
@@ -18,18 +18,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "866ec977-8178-4ebd-8b55-4f98c27a6c11",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loaded compounds: 5000\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "smiles_list = np.genfromtxt(\"smiles.txt\", dtype=str, delimiter='\\n', comments=None)[:5000]\n",
     "print(f\"Loaded compounds: {len(smiles_list)}\")"
@@ -84,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 60,
    "id": "a8313cfa-fb06-4854-9e06-64dc745edc24",
    "metadata": {},
    "outputs": [],
@@ -116,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "id": "495187b6-bb17-4a83-b33d-96380a55496d",
    "metadata": {},
    "outputs": [],
@@ -136,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 53,
    "id": "3a0a8ab7-37f2-459c-8b65-f1334c53d097",
    "metadata": {},
    "outputs": [],
@@ -147,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 54,
    "id": "989e475b-ba4d-43c0-818c-5af526117be2",
    "metadata": {},
    "outputs": [],
@@ -183,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "id": "76d27494-4aa6-469d-9064-25212c4c3041",
    "metadata": {},
    "outputs": [],
@@ -203,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 48,
    "id": "964d136d-e63d-4c4f-936f-23f413111db5",
    "metadata": {},
    "outputs": [],
@@ -235,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 50,
    "id": "389b545e-4a17-41a9-9dc1-70c9f3e5df42",
    "metadata": {},
    "outputs": [],
@@ -258,18 +250,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "id": "4bd6a4b3-bcbd-4d37-a180-421920c6cc2e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 5000/5000 [00:28<00:00, 176.75it/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "embedding = get_chemberta(smiles_list)"
    ]
@@ -294,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 44,
    "id": "9dce8bf4-9d7b-4702-9fba-8c2f6027860d",
    "metadata": {},
    "outputs": [],
@@ -306,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 45,
    "id": "0474621b-65a0-4a45-b793-f33dfdee85b5",
    "metadata": {},
    "outputs": [],
@@ -334,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "id": "bc0ece9d-ce1b-4a70-a778-7c9d5e8dad29",
    "metadata": {},
    "outputs": [],
@@ -399,17 +383,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 104,
    "id": "a7e46776-4808-4f7e-8b3e-426eecbdc0a7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from macaw import *"
+    "from macaw import MACAW"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 105,
    "id": "a85136c8-5dcf-4277-9ccb-ad946c37a779",
    "metadata": {},
    "outputs": [],
@@ -424,7 +408,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "24e7ee91-0d7f-43ef-8334-3fc4ca2f856c",
+   "id": "2447c893-8cc9-45a0-9d6d-38998a730dc3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -443,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 26,
    "id": "13dc556d-aae8-4f2d-977e-bc203e901946",
    "metadata": {},
    "outputs": [],
@@ -457,12 +441,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "970dc050-2f43-4652-ae57-bc76eceb3fe7",
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_molformer(smiles_list):\n",
+    "    smiles_list = [str(smiles) for smiles in smiles_list]\n",
     "    inputs = tokenizer(smiles_list, padding=True, return_tensors=\"pt\")\n",
     "    with torch.no_grad():\n",
     "        outputs = model(**inputs)\n",
@@ -472,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "545255a1-33fd-47ed-8e20-0dd397bcd92f",
    "metadata": {},
    "outputs": [],
@@ -514,12 +499,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "05f859a7-c232-4f91-90b7-09fef505698b",
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_gpt2(smiles_list):\n",
+    "    smiles_list = [str(smiles) for smiles in smiles_list]\n",
     "    embedding_list = []\n",
     "    for i in range(0, len(smiles_list), 100):\n",
     "        print(f\"{i}:{i+100}\")\n",
@@ -556,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 39,
    "id": "3a859abe-f19c-466a-9f7a-c605f1a487fa",
    "metadata": {},
    "outputs": [],
@@ -569,12 +555,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 42,
    "id": "1ebd01be-dc9a-47b5-9585-26d178daf154",
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_bert_smiles(smiles_list):\n",
+    "    smiles_list = [str(smiles) for smiles in smiles_list]\n",
     "    inputs = tokenizer(smiles_list, padding=True, return_tensors=\"pt\")\n",
     "    with torch.no_grad():\n",
     "        outputs = model(**inputs)\n",
@@ -585,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "id": "4d0fe199-182b-48d0-ade5-c78deca9e805",
    "metadata": {},
    "outputs": [],
@@ -596,7 +583,9 @@
   {
    "cell_type": "markdown",
    "id": "671197c5-5559-4dc3-9539-247f84308e5d",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## MAT"
    ]
@@ -672,7 +661,9 @@
   {
    "cell_type": "markdown",
    "id": "5f2919e0-260f-4e31-9632-5d060743ac7e",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## R-MAT"
    ]
@@ -747,9 +738,7 @@
   {
    "cell_type": "markdown",
    "id": "d401bbee-9573-4565-8cb0-f43b82fcc8fc",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "# Distance and correlation calculations"
    ]
@@ -764,7 +753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "id": "4d49b624-d892-48eb-8b0e-b13fb3552d09",
    "metadata": {},
    "outputs": [],
@@ -861,15 +850,15 @@
     "embedding_list = (\"mol2vec\", \"graph2vec\", \"chemberta\", \"cddd\", \"mte\", \"macaw\", \"molformer\", \"gpt2\", \"bert_smiles\")\n",
     "measures_list = (\"euclidean\", \"cosine\", \"canberra\")\n",
     "\n",
-    "with open(f\"data/distance/similarity_jak2.pkl\", \"rb\") as file:\n",
+    "with open(f\"similarity.pkl\", \"rb\") as file:\n",
     "    similarity_matrix = pickle.load(file)\n",
     "print(similarity_matrix.shape)\n",
     "    \n",
     "similarity_matrix_flat = similarity_matrix.flatten()\n",
     "for embedding in embedding_list:\n",
+    "    print(f\"{embedding.capitalize()}\")\n",
     "    X = [similarity_matrix_flat]\n",
     "    for measure in measures_list:\n",
-    "        print(measure)\n",
     "        with open(f\"distance_{embedding}_{measure}.pkl\", \"rb\") as file:\n",
     "            dist_matrix = pickle.load(file)\n",
     "        dist_matrix = np.nan_to_num(dist_matrix)\n",
@@ -878,9 +867,18 @@
     "        X.append(dist_matrix_norm)\n",
     "    corr_matrix = np.corrcoef(X)\n",
     "\n",
-    "    print(corr_matrix)\n",
     "    for measure, corr in zip(measures_list, corr_matrix[0, 1:]):\n",
     "        print(f\"{measure}: {corr}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a8873d23-a2b2-45e1-b0b6-f45bee852e83",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install macaw==0.2.dev0"
    ]
   }
  ],
