--- a/embedding_calculation.ipynb
+++ b/embedding_calculation.ipynb
@@ -822,7 +822,7 @@
     "    embedding = np.nan_to_num(embedding)\n",
     "    print(f\"Calculated {emb_name} embedding: {embedding.shape}\")\n",
     "    with open(f\"{emb_name}_embedding.pkl\", \"wb\") as file:\n",
-    "        pickle.dump(similarity_matrix, file)\n",
+    "        pickle.dump(embedding, file)\n",
     "\n",
     "    for m_name in measure_list:\n",
     "        distance_matrix = get_pairwise_distance(embedding, m_name)\n",
