Updates around input data

--- a/embedding_calculation.ipynb
+++ b/embedding_calculation.ipynb
@@ -382,6 +382,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f4a72164",
+   "metadata": {},
+   "source": [
+    "! The model may not work for less than about 100 compounds !"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 104,
    "id": "a7e46776-4808-4f7e-8b3e-426eecbdc0a7",
@@ -813,7 +821,9 @@
     "    (\"macaw\", get_macaw),\n",
     "    (\"molformer\", get_molformer),\n",
     "    (\"gpt2\", get_mol2vec),\n",
-    "    (\"bert_smiles\", get_bert_smiles)\n",
+    "    (\"bert_smiles\", get_bert_smiles),\n",
+    "    (\"mat\", get_mat),\n",
+    "    (\"rmat\", get_rmat),\n",
     ")\n",
     "measure_list = (\"euclidean\", \"cosine\", \"canberra\")\n",
     "\n",
@@ -847,7 +857,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "embedding_list = (\"mol2vec\", \"graph2vec\", \"chemberta\", \"cddd\", \"mte\", \"macaw\", \"molformer\", \"gpt2\", \"bert_smiles\")\n",
+    "embedding_list = (\"mol2vec\", \"graph2vec\", \"chemberta\", \"cddd\", \"mte\", \"macaw\", \"molformer\", \"gpt2\", \"bert_smiles\", \"mat\", \"rmat\")\n",
     "measures_list = (\"euclidean\", \"cosine\", \"canberra\")\n",
     "\n",
     "with open(f\"similarity.pkl\", \"rb\") as file:\n",
@@ -869,16 +879,6 @@
     "\n",
     "    for measure, corr in zip(measures_list, corr_matrix[0, 1:]):\n",
     "        print(f\"{measure}: {corr}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a8873d23-a2b2-45e1-b0b6-f45bee852e83",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!pip install macaw==0.2.dev0"
    ]
   }
  ],
